fixed right shift

--- a/tom/style.css
+++ b/tom/style.css
@@ -24,7 +24,6 @@ body {
 img {
     /* padding: 1em;
     width: 8em; */
-    padding: 15px;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
